sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: not found: type int
						echange(i:Int , i+1 :int)
                                                                     ^